fix logo alignment

--- a/starbucks-homepage-clone/style.css
+++ b/starbucks-homepage-clone/style.css
@@ -28,13 +28,13 @@ nav {
 
 .nav-content .logo-starbucks {
   width: 3.3rem;
-  margin-left: 20px;
+  margin: 0 15px;
 }
 
 .nav-wrapper {
   display: flex;
-  max-width: 1450px;
-  margin: auto;
+  max-width: 1500px;
+  margin: auto auto auto 0;
   padding: 0 20px;
   flex: 1;
 }
